kube/mnist.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mnist-flask
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: mnist-flask
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mnist-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mnist-flask
  template:
    metadata:
      labels:
        app: mnist-flask
    spec:
      containers:
      - name: mnist-flask
        image: quay.io/ltsai/mnist-flask:1.0
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: mnist-draw
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: mnist-draw
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mnist-draw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mnist-draw
  template:
    metadata:
      labels:
        app: mnist-draw
    spec:
      containers:
      - name: mnist-draw
        image: quay.io/ltsai/mnist-draw:1.0
        ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mnist-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: mnist-flask.demo.ltsai.com
    http:
      paths:
      - backend:
          serviceName: mnist-flask
          servicePort: 5000
  - host: mnist-draw.demo.ltsai.com
    http:
      paths:
      - backend:
          serviceName: mnist-draw
          servicePort: 8080
